Changed from unpkgd, as it was hanging on CORS issue.

--- a/jax3d/projects/mobilenerf/view_forwardfacing.html
+++ b/jax3d/projects/mobilenerf/view_forwardfacing.html
@@ -68,13 +68,13 @@
 </script>
 
 <script type="module">
-  import * as THREE from "https://unpkg.com/three?module";
+  import * as THREE from "https://esm.run/three";
 
-  import WebGL from "https://unpkg.com/three/examples/jsm/capabilities/WebGL.js?module";
+  import WebGL from "https://esm.run/three/examples/jsm/capabilities/WebGL.js";
 
-  import { OBJLoader } from "https://unpkg.com/three/examples/jsm/loaders/OBJLoader.js?module";
+  import { OBJLoader } from "https://esm.run/three/examples/jsm/loaders/OBJLoader.js";
 
-  import { OrbitControls } from "https://unpkg.com/three/examples/jsm/controls/OrbitControls.js?module";
+  import { OrbitControls } from "https://esm.run/three/examples/jsm/controls/OrbitControls.js";
 
   // copied and slightly modified from SNeRG
 
